add SASS and folder img for images

--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BreakProms</title>
+    <link rel="Stylesheet" href="src/style/main.css" />
 </head>
 <body>
-    <h1>BreakProms!!!!</h1>
+    <body>
+        <h1>BreakProms!!!!</h1>
+    </body>
 <script src="src/index.js"></script>
 </body>
 </html>
