Alterações no Código e adição da logo

--- a/index.html
+++ b/index.html
@@ -7,9 +7,17 @@
     <link rel="Stylesheet" href="src/style/main.css" />
 </head>
 <body>
-    <body>
-        <h1>BreakProms!!!!</h1>
-    </body>
-<script src="src/index.js"></script>
+    <!-- Criar aqui todo o escopo e contéudo do site-->
+     <div class="nameofsite">
+       <h1>BreakProms!!!!</h1>  
+    </div> 
+       <!-- Adicionar Links para quando o user clicar neles ser direcionado para a pagina final da loja e comprar o produto-->
+        <a href=""></a>
+
+    <div class="container">
+       <img src="img/logs/imgs/2.png" alt="Logo"  width="300">  <!-- Adcionar imagens-->
+    </div>
+
+       <script src="src/index.js">Adiquirir</script>
 </body>
 </html>
