--- a/index.html
+++ b/index.html
@@ -3,13 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap
+    .min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6Yct
+    nYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.
+    bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy
+    9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <title>BreakProms</title>
     <link rel="Stylesheet" href="src/style/main.css" />
 </head>
 <body>
-    <body>
-        <h1>BreakProms!!!!</h1>
-    </body>
+    <section>
+        <h1>Nome do Site</h1>
+        <h3>Encontre cupons nas lojas</h3>
+        <ul class="list-group">
+            <li>loja1</li>
+        </ul>
+    </section>
+</body>
 <script src="src/index.js"></script>
 </body>
 </html>
