--- a/index.html
+++ b/index.html
@@ -3,26 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap
-    .min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6Yct
-    nYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.
-    bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy
-    9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <title>BreakProms</title>
-    <link rel="Stylesheet" href="src/style/main.css" />
+    <title>Cupponizei</title>
+    <link rel="stylesheet" href="src/style/main.css">
 </head>
 <body>
-    <body>
-        <section>
-            <h1>Nome do Site</h1>
-            <h3>Encontre cupons nas lojas</h3>
-            <ul class="list-group">
-                <li>loja1</li>
+    <header class="header">
+
+        <!--Logo do Site que fica ao lado do nome do site-->
+        <div class="logo">
+            <img src="img/logs/imgs/Designer (7).jpeg" alt="Logo do Site">
+        </div>
+
+        <nav class="nav">
+            <ul>   <!--Lista de Categorias do site-->
+                <li><a href="#inicio" class="nav-link">Inicio</a></li>
+                <li><a href="#categorias" class="nav-link">Categorias</a></li>
+                <li><a href="#categorias" class="nav-link">Lojas</a></li>
+                <li><a href="#ofertas" class="nav-link">Ofertas</a></li>
+                <li><a href="#mais" class="nav-link">Mais</a></li>
             </ul>
-        </section>
-    </body>
+        </nav>
+        <!-- Barra de Pesquisa do site-->
+        <form class="search-form" action="#" method="GET">
+            <div class="search-container">
+                <input type="text" class="search-input" placeholder="Pesquisar...">
+                <button type="submit" class="search-button">
+                    <img src="img/logs/imgs/Designer (7).jpeg" alt="Ícone de Pesquisa">
+                </button>
+    </header>
+
+    <!-- Conteúdo da página -->
+    <div class="sections-container">
+        <section id="home">Home Section</section>
+        <section id="sobre">Sobre Section</section>
+        <section id="contato">Contato Section</section>
+    </div>
     
-<script src="src/index.js"></script>
+    <script src="src/index.js"></script>
 </body>
 </html>
