--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <!--Logo do Site que fica ao lado do nome do site-->
         <div class="logo">
-            <img src="img/logs/imgs/Designer (7).jpeg" alt="Logo do Site"><strong>Cupponizei</strong>
+            <img src="img/logs/imgs/28125718.200000003_03 logo.jpg" alt="Logo do Site"><strong><span>CUPPONIZEI</span></strong>
         </div>
 
         <nav class="nav">
@@ -43,16 +43,23 @@
              <article>
                 <header> <!-- Banner que poderá ser reutilizado-->
                     <article class="banner">
-                        <img src="img/logs/imgs/2.png" alt="Banner do Site" class="banner-image">
+                        <img src="img/logs/imgs/Designer (2).jpeg" alt="Banner do Site" class="banner-image">
                         <div class="banner-content">
-                            <h1>Bem-vindo ao Nosso Site!</h1>                        
+                            <h1>Bem-vindo ao nosso site!</h1>                        
                         </div>
                     </article>
                 </header>
              </article>
-            <section id="produtoone">Produto1</section>
-            <section id="produtotwo">Produto2</section>
-            <section id="produtothird">Produto3</section>
+             <!--Adicione os produtos e os links de afiliado nas seções-->
+             <section class="produto">
+                <img src="caminho/para/sua/imagem1.jpg" alt="Produto 1">
+                <a href="link-afiliado-1" target="_blank">Ver mais</a>
+            </section>
+            <section class="produto">
+                <img src="caminho/para/sua/imagem2.jpg" alt="Produto 2">
+                <a href="link-afiliado-2" target="_blank">Ver mais</a>
+            </section>
+            </div>
             </div>
         </div>
     </div>
