--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     </header>
 
     <!--contéudo principal da pagina-->
-    <main>
-     <div class="wrapper">
+    <main> 
+     <div class="wrapper"> 
         <!-- Conteúdo principal do site -->
         <div class="content">
             <!-- Adicione aqui o conteúdo da sua página -->
@@ -50,15 +50,123 @@
                     </article>
                 </header>
              </article>
+
              <!--Adicione os produtos e os links de afiliado nas seções-->
+
+             <!--Seção Inicial-->
+
+             <div class="container">
              <section class="produto">
                 <img src="caminho/para/sua/imagem1.jpg" alt="Produto 1">
+                <p>Descrição do Produto</p>
                 <a href="link-afiliado-1" target="_blank">Ver mais</a>
             </section>
+
             <section class="produto">
                 <img src="caminho/para/sua/imagem2.jpg" alt="Produto 2">
+                <p>Descrição do Produto</p>
                 <a href="link-afiliado-2" target="_blank">Ver mais</a>
             </section>
+
+            <section class="produto">
+                <img src="caminho/para/sua/imagem.jpg" alt="Produto 3">
+                <p>Descrição do Produto</p>
+                <a href="link-afiliado-3" target="_blank">Ver Mais</a>          
+            </section>
+
+            <section class="produto">
+                <img src="caminho/para/sua/imagem.jpg" alt="Produto 4">
+                <p>Descrição do Produto</p>
+                <a href="link-afiliado-4" target="_blank">Ver mais</a>
+            </section>
+             </div>
+
+             <!--Segunda Seção-->
+
+             <div class="container2">
+                <section class="produto">
+                    <img src="caminho/para/sua/imagem.jpg" alt="Produto 5">
+                    <p>Descrição do Produto</p>
+                    <a href="link-afiliado-" target="_blank">Ver mais</a>
+                </section>
+
+                <section class="produto">
+                    <img src="caminho/para/sua/imagem.jpg" alt="Produto 6">
+                    <p>Descrição do Produto</p>
+                    <a href="link-afiliado-" target="_blank">Ver Mais</a>
+                </section>
+
+                <section class="produto">
+                    <img src="caminho/para/sua/imagem.jpg" alt="Produto 6">
+                    <p>Descrição do Produto</p>
+                    <a href="link-afiliado-" target="_blank">Ver Mais</a>
+                </section>
+
+                <section class="produto">
+                    <img src="caminho/para/sua/imagem.jpg" alt="Produto 7">
+                    <p>Descrição do Produto</p>
+                    <a href="link-afiliado-" target="_blank">Ver Mais</a>
+                </section>
+
+             </div>
+
+             <!--Terceira Seção-->
+
+             <div class="container3">
+
+                <section class="produto">
+                    <img src="caminho/para/sua/imagem.jpg" alt="Produto 8">
+                    <p>Descrição do Produto</p>
+                    <a href="link-afiliado-" target="_blank"> Ver Mais</a>
+                </section>
+
+                <section class="produto">
+                    <img src="caminho/para/sua/imagem.jpg" alt="Produto 9">
+                    <p>Descrição do Produto</p>
+                    <a href="link-afiliado-" target="_blank"> Ver Mais</a>
+                </section>
+
+                <section class="produto">
+                    <img src="caminho/para/sua/imagem.jpg" alt="Produto 10">
+                    <p>Descrição do Produto</p>
+                    <a href="link-afiliado-" target="_blank"> Ver Mais</a>
+                </section>
+
+                <section class="produto">
+                    <img src="caminho/para/sua/imagem.jpg" alt="Produto 11">
+                    <p>Descrição do Produto</p>
+                    <a href="link-afiliado-" target="_blank"> Ver Mais</a>
+                </section>
+             </div>
+
+             <!--Quarta Seção-->
+
+             <div class="container4">
+
+                <section class="produto">
+                    <img src="caminho/para/sua/imagem.jpg." alt="Produto12">
+                    <p>Descrição do Produto</p>
+                    <a href="link-afiliado" target="_blank">Ver Mais</a>
+                </section>
+
+                <section class="produto">
+                    <img src="caminho/para/sua/imagem.jpg" alt="Produto13">
+                    <p>Descrição do Produto</p>
+                    <a href="link-afiliado" target="_blank">Ver Mais</a>
+                </section>
+
+                <section class="produto">
+                    <img src="caminho/para/sua/imagem.jpg" alt="Produto14">
+                    <p>Descrição do Produto</p>
+                    <a href="link-afiliado" target="_blank">Ver Mais</a>
+                </section>
+
+                <section class="produto">
+                    <img src="caminho/para/sua/imagem.jpg" alt="Produto15">
+                    <p>Descirção do Produto</p>
+                    <a href="link-afiliado" target="_blank">Ver Mais</a>
+                </section>
+             </div>
             </div>
             </div>
         </div>
@@ -66,7 +174,7 @@
 </main>
 
     <!-- Inicio do Rodapé-->
-     <footer>
+     <footer class="footer">
         <div class="footer-content">
             <div class="footer-section about">
                 <h3>Sobre</h3>
