--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-BR"> 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -163,6 +163,35 @@
 
                 <section class="produto">
                     <img src="caminho/para/sua/imagem.jpg" alt="Produto15">
+                    <p>Descirção do Produto</p>
+                    <a href="link-afiliado" target="_blank">Ver Mais</a>
+                </section>
+             </div>
+
+             <!--Quinta Sessão-->
+
+             <div class="container5">
+
+                <section class="produto">
+                    <img src="caminho/para/sua/imagem.jpg." alt="Produto16">
+                    <p>Descrição do Produto</p>
+                    <a href="link-afiliado" target="_blank">Ver Mais</a>
+                </section>
+
+                <section class="produto">
+                    <img src="caminho/para/sua/imagem.jpg" alt="Produto17">
+                    <p>Descrição do Produto</p>
+                    <a href="link-afiliado" target="_blank">Ver Mais</a>
+                </section>
+
+                <section class="produto">
+                    <img src="caminho/para/sua/imagem.jpg" alt="Produto18">
+                    <p>Descrição do Produto</p>
+                    <a href="link-afiliado" target="_blank">Ver Mais</a>
+                </section>
+
+                <section class="produto">
+                    <img src="caminho/para/sua/imagem.jpg" alt="Produto19">
                     <p>Descirção do Produto</p>
                     <a href="link-afiliado" target="_blank">Ver Mais</a>
                 </section>
