--- a/index.html
+++ b/index.html
@@ -3,21 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
+    rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"> <!-- Biblioteca para icones das redes sociais "Font Awesome"-->
     <title>Cupponizei</title>
     <link rel="stylesheet" href="src/style/main.css">
 </head>
 <body>
-    <!--Cabeçalho do Site-->
+    <header class="d-flex  bg-dark oppacit-25% flex-wrap py-3 mb-4 border-bottom">
+        <div class="col-md-3 mb-md-0" bis_skin_checked="1">
+            <img src="img/logs/imgs/logo.png"  class="img-fluid rounded col-md-3" alt="logo">
+            
+        </div>
+  
+        <ul class="nova nav col-12 col-md-auto ms-5 justify-content-center mb-md-0">
+          <li><a href="#" class="nav-link px-2 text-success">Inicio</a></li>
+          <li><a href="#" class="nav-link px-2 text-success">categorias</a></li>
+          <li><a href="#" class="nav-link px-2 text-success">lojas</a></li>
+          <li><a href="#" class="nav-link px-2 text-success">ofertas</a></li>
+          <li><a href="#" class="nav-link px-2 text-success">mais</a></li>
+        </ul>
+      </header>
+    <!--Cabeçalho do Site
     <header class="header">
 
-        <!--Logo do Site que fica ao lado do nome do site-->
+        <!--Logo do Site que fica ao lado do nome do site
         <div class="logo">
             <img src="img/logs/imgs/logo.png" alt="Logo do Site"><strong><span>CUPPONIZEI</span></strong>
         </div>
 
         <nav class="nav">
-            <ul>   <!--Lista de Categorias do site-->
+            <ul>   <!--Lista de Categorias do site
                 <li><a href="#inicio" class="nav-link">Inicio</a></li>
                 <li><a href="#categorias" class="nav-link">Categorias</a></li>
                 <li><a href="#lojas" class="nav-link">Lojas</a></li>
@@ -25,14 +43,14 @@
                 <li><a href="#mais" class="nav-link">Mais</a></li>
             </ul>
         </nav>
-        <!-- Barra de Pesquisa do site-->
+        <!-- Barra de Pesquisa do site
         <form class="search-form" action="#" method="GET">
             <div class="search-container">
                 <input type="text" class="search-input" placeholder="Pesquisar...">
                 <button type="submit" class="search-button">
                     <i class="fa-solid fa-magnifying-glass"></i>
                 </button>
-    </header>
+    </header>-->
 
     <!--contéudo principal da pagina-->
     <main> 
@@ -40,16 +58,6 @@
         <!-- Conteúdo principal do site -->
         <div class="content">
             <!-- Adicione aqui o conteúdo da sua página -->
-             <article>
-                <header> <!-- Banner que poderá ser reutilizado-->
-                    <article class="banner">
-                        <img src="img/logs/imgs/Designer (2).jpeg" alt="Banner do Site" class="banner-image">
-                        <div class="banner-content">
-                            <h1>Bem-vindo ao nosso site!</h1>                        
-                        </div>
-                    </article>
-                </header>
-             </article>
 
              <!--Adicione os produtos e os links de afiliado nas seções-->
 
